 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij <jelmer@vernstok.nl>

Ctrlproxy 2.7:
 * Add log levels (-d switch)
 * NetBSD portability fixes (Adrian Portelli)
 * Properly support strict-rfc1459 comparisons
 * Show SVN revision in version for SVN checkouts
 * Add support for %B and %Y (Korbinian Rosenegger)
 * Use separate include files
 * Move <autosend> to a seperate module
 * No longer depend on specific order of USER and NICK commands
 * Use new CtrlProxy-specific logging system. Logs go 
 to ~/.ctrlproxy/log by default now when in daemon mode.
 * Fixed 100% CPU memory usage bug
 * Add inetd-style client support
 * Support CONNECT proxy command as used by irssi
 * Fix crash bug in log_custom (Korbinian Rosenegger)
 * admin module can now also work as a seperate ('virtual') network
 * get rid of complicated filter class system
 * nickserv is now "self-learning"
 * Reduce number of files generated by configure
 * Modules can now be compiled into ctrlproxy as well as being built as shared
 libraries
 * Fix large number of memory leaks
 * Use libxml less internally
 * Moved documentation to seperate repository (version-independant)
 * Add socks module
 * Add Mozilla NSS support
 * Enhance custom_log (Alexander Wild <wild@te-elektronik.com>)
 * Use ctrlproxyrc.default if ~/.ctrlproxyrc does not exist
 * Make reconnect_timeout changeable (Alexander Wild <wild@te-elektronik.com>)
 * Add scripts/ directory and framework
 * Add default ctrlproxyrc and install it
 * Add webconfig python script (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add some tests to the testsuite
 * Extend linestack interface
 * Add test-filter utility
 * Fix bug in unloading modules
 * Fix dependency system for modules
 * Add testsuite
 * Make CONNECT command force a reconnect if one is waiting to happen
 * Restructure API for server management inside networks
 * Add DELNETWORK command
 * Introduce functions to use filter classes