@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Remove linestack_memory
  * Add log levels (-d switch)
  * NetBSD portability fixes (Adrian Portelli)
  * Properly support strict-rfc1459 comparisons
